Changed the gap of the product cards from 50px to 1 rem to make sure it's responsive

--- a/style.css
+++ b/style.css
@@ -110,7 +110,7 @@ section.video{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 50px;
+    gap: 2rem;
 }
 .product-cards {
     border: 1px solid rgb(167, 165, 165);
